--- a/app/src/main/res/layout/custom_discarder_selector.xml
+++ b/app/src/main/res/layout/custom_discarder_selector.xml
@@ -4,6 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:layout_marginStart="@dimen/standard_margin"
+    android:layout_marginEnd="@dimen/standard_margin"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/standard_margin">
@@ -12,9 +14,9 @@
         android:id="@+id/llDiscarderSelectorWest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/standard_margin"
         android:gravity="center"
         android:orientation="vertical"
+        android:padding="@dimen/standard_margin"
         android:tag="false">
 
         <TextView
@@ -23,19 +25,15 @@
             android:layout_height="wrap_content"
             android:text="@string/player_west"
             android:textColor="@color/grayMM"
-            android:textSize="20sp"
-
-            tools:textColor="@color/red" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/tvDiscarderSelectorWestPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/grayMM"
-            android:textSize="18sp"
-
-            tools:text="-16"
-            tools:textColor="@color/red" />
+            android:textSize="21sp"
+            tools:text="-16" />
 
     </LinearLayout>
 
@@ -43,12 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/double_standard_margin"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/llDiscarderSelectorNorth"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
@@ -57,29 +55,29 @@
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorNorthName"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:lines="1"
                 android:text="@string/player_north"
                 android:textColor="@color/grayMM"
-                android:textSize="20sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorNorthPoints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grayMM"
-                android:textSize="18sp"
-                tools:text="-8"
-                tools:textColor="@color/red" />
+                android:textSize="21sp"
+                tools:text="-8" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llDiscarderSelectorSouth"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/triple_standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
@@ -87,21 +85,21 @@
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorSouthName"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:lines="1"
                 android:text="@string/player_south"
                 android:textColor="@color/grayMM"
-                android:textSize="20sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorSouthPoints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grayMM"
-                android:textSize="18sp"
-                tools:text="-8"
-                tools:textColor="@color/red" />
+                android:textSize="21sp"
+                tools:text="-8" />
 
         </LinearLayout>
 
@@ -122,7 +120,8 @@
             android:layout_height="wrap_content"
             android:text="@string/player_east"
             android:textColor="@color/grayMM"
-            android:textSize="20sp"
+            android:textSize="24sp"
+            android:textStyle="bold"
             tools:textColor="@color/colorPrimary" />
 
         <TextView
@@ -130,7 +129,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/grayMM"
-            android:textSize="18sp"
+            android:textSize="21sp"
+            android:textStyle="bold"
             tools:text="+32"
             tools:textColor="@color/colorPrimary" />
 
