--- a/app/src/main/res/layout/game_discarder_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_discarder_dialog_fragment.xml
@@ -11,7 +11,7 @@
         android:textStyle="bold"
         android:textAllCaps="true"
         android:gravity="center"
-        android:text="@string/discarder"
+        android:text="@string/discarder_"
         android:textColor="@color/grayMM"
         android:layout_marginTop="@dimen/double_standard_margin"
         android:layout_marginBottom="@dimen/standard_margin" />
