--- a/app/src/main/res/menu/game_list_item_menu.xml
+++ b/app/src/main/res/menu/game_list_item_menu.xml
@@ -3,6 +3,6 @@
 
     <item
         android:id="@+id/game_list_item_menu_remove"
-        android:title="@string/remove" />
+        android:title="@string/delete" />
 
 </menu>
