--- a/app/src/main/res/layout/game_table_seat_north.xml
+++ b/app/src/main/res/layout/game_table_seat_north.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:rotation="90">
+    android:id="@+id/rlTableSeatNorthContainer"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivTableSeatNorthSeatWindIcon"
