--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:rotation="180">
+    android:id="@+id/rlTableSeatWestContainer">
 
     <ImageView
         android:id="@+id/ivTableSeatWestSeatWindIcon"
