--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_ratate_seats"
+        android:icon="@drawable/ic_rotate_90_degrees_ccw_black_24dp"
+        android:title="@string/rotate_seats"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_combinations"
